APP-3448 - Fix icon color on dark mode (#40)

--- a/src/utils/mixins/_inputs.scss
+++ b/src/utils/mixins/_inputs.scss
@@ -57,5 +57,6 @@
   }
   .tk-input__icon.active {
     background-color: $focusBorderColor;
+    color: $scolor-white;
   }
 }
